--- a/templates/index.html
+++ b/templates/index.html
@@ -100,6 +100,8 @@
                     <p>{{ error }}</p>
                 {% endif %}
                 <div id ='resultBox' style="width: 30%;">
+                    <br>
+                    <h2>Result</h2>
                     <div id ="loadingWraaper">
                         <div id = "statusWraaper"><p id='statusBox'></p></div>
                         <div id = "loader" style="display: none;"></div><br>
