update index page

--- a/templates/index.html
+++ b/templates/index.html
@@ -76,9 +76,19 @@
                 <A>EasyOCR : </A> <A href="https://github.com/Wook-2/EasyOCR">https://github.com/Wook-2/EasyOCR</A><br>
                 <A>TTS : </A> <A href="https://github.com/woomurf/WaveRNN">https://github.com/woomurf/WaveRNN</A>
                 <br>
-                <A>Testing API : </A> <A href="https://ainize.ai/wook-2/easyocrgpu"> on Ainize </A>
+                <A>Ainize : </A> <A href="https://ainize.ai/Wook-2/callapi?branch=master"> on Ainize </A>
                 <hr class="solid">
+                <div style="float:left;width:100%;">
+                    <h2>How to use?</h2>
+                    <p style="font-weight: bold;">1. Upload image</p>
+                    <p style="font-weight: bold;">2. Click [RUN] button</p>
+                    <p style="font-weight: bold;">* Only English will be read. </p>
+
+                </div>
+                
+
                     <div id = 'inputImage' style="float:left;width: 50%;">
+                        <hr class="solid">
                         <h2>Upload </h2>
                             <label for="input">Import Image: </label>
                             <input id="input" type=file onchange="onFileSelected(event)" name=file><br>
@@ -89,10 +99,12 @@
                     </div>
                 
                 <div style="float:left;width: 50%;">
+                    <hr class="solid">
                 <h2>Download sample image</h2><br>
                 [Short Poem] : <a href="/static/short_poem.jpg" target='blank'><button class='btn btn-primary' style="border-radius: 3px; margin-top: 5px; margin-bottom: 5px;">Download</button></a><br>
                 [Warning Post] : <a href="/static/post.jpeg" target='blank'><button class='btn btn-primary' style="border-radius: 3px;margin-top: 5px; margin-bottom: 5px;">Download</button></a><br>
                 [Message Alert] : <a href="/static/alert.png" target='blank'><button class='btn btn-primary' style="border-radius: 3px;margin-top: 5px; margin-bottom: 5px;">Download</button></a><br>
+                [Menu Board] : <a href="/static/menu.jpg" target='blank'><button class='btn btn-primary' style="border-radius: 3px;margin-top: 5px; margin-bottom: 5px;">Download</button></a><br>
                 </div>
                 <!-- <br><br><br><br><br><br><br><br><br> -->
                             <!-- Result Box -->
