explain and notes

--- a/templates/index.html
+++ b/templates/index.html
@@ -46,6 +46,10 @@
                 display: inline-block;
                 text-align: center;
             }
+
+            /* li{
+                font-weight: bold;
+            } */
         </style>
     </head>
     <script>
@@ -72,18 +76,25 @@
                  <!-- Proejct Title -->
                  
                 <h1>Image Reader<p style="font-size:medium;">(ver 1.0.0)</p></h1>
+                <p style="font-weight: bold;">Read English in image what you upload and Make voice file using EasyOCR and WaveRNN</p>
                 <!-- Github link and Ainize link -->
+                <A>GitHub Repo : </A> <A href="https://github.com/Wook-2/callapi">https://github.com/Wook-2/callapi</A><br>
                 <A>EasyOCR : </A> <A href="https://github.com/Wook-2/EasyOCR">https://github.com/Wook-2/EasyOCR</A><br>
-                <A>TTS : </A> <A href="https://github.com/woomurf/WaveRNN">https://github.com/woomurf/WaveRNN</A>
+                <A>WaveRNN : </A> <A href="https://github.com/woomurf/WaveRNN">https://github.com/woomurf/WaveRNN</A>
                 <br>
                 <A>Ainize : </A> <A href="https://ainize.ai/Wook-2/callapi?branch=master"> on Ainize </A>
                 <hr class="solid">
                 <div style="float:left;width:100%;">
-                    <h2>How to use?</h2>
-                    <p style="font-weight: bold;">1. Upload image</p>
-                    <p style="font-weight: bold;">2. Click [RUN] button</p>
-                    <p style="font-weight: bold;">* Only English will be read. </p>
-
+                    <h2>How to use</h2>
+                    <ol>
+                        <li>Upload image</li>
+                        <li>Click [RUN] button</li>
+                    </ol>
+                    <h3>Note</h3>
+                    <ul>
+                        <li>If the text to be read is too long or difficult to recognize letters, the voice file may break.</li>
+                        <li>It can only read English.</li>
+                    </ul>
                 </div>
                 
 
