--- a/templates/index.html
+++ b/templates/index.html
@@ -103,7 +103,8 @@
                         <h2>Upload </h2>
                             <label for="input">Import Image: </label>
                             <input id="input" type=file onchange="onFileSelected(event)" name=file><br>
-                            <img src="" alt="" id="myimage" style="height: 200px;"><br>
+                            <div style="overflow: auto;margin-right: 10%;"><img src="" alt="" id="myimage" style="height: 200px;overflow: scroll"><br></div>
+                            
                             <button id = "submit_btn" type='submit' class="btn btn-primary btn-lg" style="margin-left: auto;"> Run </button>
                             <!-- <input id="submit_btn"class="btn btn-primary btn-lg" style="margin-left: auto;" type=submit value=Upload> -->
                             
