--- a/templates/index.html
+++ b/templates/index.html
@@ -86,10 +86,10 @@
                 <A>Ainize : </A> <A href="https://ainize.ai/Wook-2/callapi?branch=master"> on Ainize </A><br>
                 
                 <hr class="solid">
-                <div style="float:left;width:100%;">
+                <div style="width:100%;">
                     <h2>Example</h2>
                     <h4>Input</h4>
-                    <img src="../static/post.jpeg" alt="">
+                    <img src="../static/post.jpeg" alt=""></img>
                     <h4>Output</h4>
                     <audio controls="controls">
                         <source src="../static/ImageReaderSample.wav"></source>
@@ -106,31 +106,31 @@
                         <li>It can only read English.</li>
                     </ul>
                 </div>
-                <div style="float: left;width:100%;">
-                <hr class="solid">
-                <h2>Download sample image</h2><br>
-                [Short Poem] : <a href="/static/short_poem.jpg" target='blank'><button class='btn btn-primary' style="border-radius: 3px; margin-top: 5px; margin-bottom: 5px;">Download</button></a><br>
-                [Warning Post] : <a href="/static/post.jpeg" target='blank'><button class='btn btn-primary' style="border-radius: 3px;margin-top: 5px; margin-bottom: 5px;">Download</button></a><br>
-                [Message Alert] : <a href="/static/alert.png" target='blank'><button class='btn btn-primary' style="border-radius: 3px;margin-top: 5px; margin-bottom: 5px;">Download</button></a><br>
-                [Road Sign] : <a href="/static/roadsign2.jpeg" target='blank'><button class='btn btn-primary' style="border-radius: 3px;margin-top: 5px; margin-bottom: 5px;">Download</button></a><br>
-                [Sign Board] : <a href="/static/signboard.jpg" target='blank'><button class='btn btn-primary' style="border-radius: 3px;margin-top: 5px; margin-bottom: 5px;">Download</button></a><br>
-            </div>
-                
-
-                    <div id = 'inputImage' style="float:left;width: 50%;">
-                        <hr class="solid">
-                        <h2>Upload </h2>
-                            <label for="input">Import Image: </label>
-                            <input id="input" type=file onchange="onFileSelected(event)" name=file><br>
-                            <div style="overflow: auto;margin-right: 10%;"><img src="" alt="" id="myimage" style="height: 200px;overflow: scroll"><br></div>
-                            <!-- <img src="" alt="" id="myimage" style="height: 200px;overflow: scroll"><br> -->
-                            <button id = "submit_btn" type='submit' class="btn btn-primary btn-lg" style="margin-left: auto;"> Run </button>
-                            <!-- <input id="submit_btn"class="btn btn-primary btn-lg" style="margin-left: auto;" type=submit value=Upload> -->
-                            
-                    </div>
-                
-                <div id = 'resultBox' style="float:left;width: 50%;">
+                <div style="width:100%;">
                     <hr class="solid">
+                    <h2>Download sample image</h2><br>
+                    [Short Poem] : <a href="/static/short_poem.jpg" target='blank'><button class='btn btn-primary' style="border-radius: 3px; margin-top: 5px; margin-bottom: 5px;">Download</button></a><br>
+                    [Warning Post] : <a href="/static/post.jpeg" target='blank'><button class='btn btn-primary' style="border-radius: 3px;margin-top: 5px; margin-bottom: 5px;">Download</button></a><br>
+                    [Message Alert] : <a href="/static/alert.png" target='blank'><button class='btn btn-primary' style="border-radius: 3px;margin-top: 5px; margin-bottom: 5px;">Download</button></a><br>
+                    [Road Sign] : <a href="/static/roadsign2.jpeg" target='blank'><button class='btn btn-primary' style="border-radius: 3px;margin-top: 5px; margin-bottom: 5px;">Download</button></a><br>
+                    [Sign Board] : <a href="/static/signboard.jpg" target='blank'><button class='btn btn-primary' style="border-radius: 3px;margin-top: 5px; margin-bottom: 5px;">Download</button></a><br>
+                </div>
+                <hr class="solid">
+            <div>
+                <div id = 'inputImage' style="display:inline-block; width: 49%;">
+
+                    <h2>Upload </h2>
+                        <label for="input">Import Image: </label>
+                        <input id="input" type=file onchange="onFileSelected(event)" name=file><br>
+                        <div style="overflow: auto;margin-right: 10%;"><img src="" alt="" id="myimage" style="height: 200px;overflow: scroll"><br></div>
+                        <!-- <img src="" alt="" id="myimage" style="height: 200px;overflow: scroll"><br> -->
+                        <button id = "submit_btn" type='submit' class="btn btn-primary btn-lg" style="margin-left: auto;"> Run </button>
+                        <!-- <input id="submit_btn"class="btn btn-primary btn-lg" style="margin-left: auto;" type=submit value=Upload> -->
+                        
+                </div>
+                
+                <div id = 'resultBox' style="display:inline-block;width: 49%;">
+                    
                     <h2>Result</h2>
                     <div id ="loadingWraaper">
                         <div id = "statusWraaper"><p id='statusBox'></p></div>
@@ -140,11 +140,12 @@
                         <source id = "result" src=""></source>
                     </audio>
                 </div>
+            </div>
                 <!-- <br><br><br><br><br><br><br><br><br> -->
                             <!-- Result Box -->
-                {% if error %}
-                    <p>{{ error }}</p>
-                {% endif %}
+                <!-- {% if error %} -->
+                    <!-- <p>{{ error }}</p> -->
+                <!-- {% endif %} -->
 
                 <!-- onclick function, you can delete this if you want  -->
                 <script>
