--- a/templates/index.html
+++ b/templates/index.html
@@ -108,12 +108,12 @@
                 <div style="width:100%;">
                     <hr class="solid">
                     <h2>Sample images</h2>
-                    Click the blue button to download an image<br>
-                    <a href="/static/short_poem.jpg" target='blank'><button class='btn btn-primary' style="border-radius: 3px; margin-top: 5px; margin-bottom: 5px;">[Short Poem]</button></a>
-                    <a href="/static/post.jpeg" target='blank'><button class='btn btn-primary' style="border-radius: 3px;margin-top: 5px; margin-bottom: 5px;">[Warning Post]</button></a>
-                    <a href="/static/alert.png" target='blank'><button class='btn btn-primary' style="border-radius: 3px;margin-top: 5px; margin-bottom: 5px;">[Message Alert]</button></a>
-                    <a href="/static/roadsign2.jpeg" target='blank'><button class='btn btn-primary' style="border-radius: 3px;margin-top: 5px; margin-bottom: 5px;">[Road Sign]</button></a>
-                    <a href="/static/signboard.jpg" target='blank'><button class='btn btn-primary' style="border-radius: 3px;margin-top: 5px; margin-bottom: 5px;">[Sign Board]</button></a><br>
+                    Click the blue button to download an image<br><br>
+                    <a href="/static/short_poem.jpg" target='blank'><button class='btn btn-primary' style="border-radius: 3px; margin-top: 5px; margin-bottom: 5px;">Short Poem</button></a>&nbsp;
+                    <a href="/static/post.jpeg" target='blank'><button class='btn btn-primary' style="border-radius: 3px;margin-top: 5px; margin-bottom: 5px;">Warning Post</button></a>&nbsp;
+                    <a href="/static/alert.png" target='blank'><button class='btn btn-primary' style="border-radius: 3px;margin-top: 5px; margin-bottom: 5px;">Message Alert</button></a>&nbsp;
+                    <a href="/static/roadsign2.jpeg" target='blank'><button class='btn btn-primary' style="border-radius: 3px;margin-top: 5px; margin-bottom: 5px;">Road Sign</button></a>&nbsp;
+                    <a href="/static/signboard.jpg" target='blank'><button class='btn btn-primary' style="border-radius: 3px;margin-top: 5px; margin-bottom: 5px;">Sign Board</button></a><br>
                 </div>
                 <hr class="solid">
             <div>
@@ -128,7 +128,7 @@
                         <!-- <input id="submit_btn"class="btn btn-primary btn-lg" style="margin-left: auto;" type=submit value=Upload> -->
                         
                 </div>
-                
+                <br>
                 <div id = 'resultBox' style=" width: 49%;">
                     
                     <h2>Result</h2>
