fix github link

--- a/templates/index.html
+++ b/templates/index.html
@@ -80,7 +80,7 @@
                 <A href="https://github.com/Wook-2/EasyOCR">EasyOCR</A> : EasyOCR is a project which recognizes text inside images, such as scanned documents and photos.
                 <br>
                 <A href="https://github.com/woomurf/WaveRNN">WaveRNN</A> : WaveRNN is a project that converts text to speech. <br>
-                <A>GitHub Repo : </A> <A href="https://github.com/Wook-2/callapi">https://github.com/Wook-2/callapi</A>
+                <A>GitHub Repo : </A> <A href="https://github.com/Wook-2/ImageReader">https://github.com/Wook-2/ImageReader</A>
                 <br>
                 <A>Ainize : </A> <A href="https://ainize.ai/Wook-2/callapi?branch=master"> on Ainize </A><br>
                 
